# pcg-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.spdx  LICENSE.txt  Makefile  README.md  xoshiro256**.cpp
cmake/: cpack-linux.cmake  ctest-clang.cmake  ctest-gcc.cmake  ctest-osx.cmake
include/: CMakeLists.txt  pcg-config.cmake.in  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
sample/: .gitignore  CMakeLists.txt  Makefile  codebook.cpp  cppref-sample.cpp  make-partytrick.cpp  pcg-demo.cpp  reverse.cpp  spew.cpp  use-partytrick.cpp
src/: CMakeLists.txt  pcg-config.cmake.in
test-high/: .gitignore  CMakeLists.txt  Makefile  check-pcg128_once_insecure.cpp  check-pcg128_oneseq_once_insecure.cpp  check-pcg16_once_insecure.cpp  check-pcg16_oneseq_once_insecure.cpp  check-pcg32.cpp  check-pcg32_c1024.cpp  check-pcg32_c1024_fast.cpp  check-pcg32_c64.cpp  check-pcg32_c64_fast.cpp  check-pcg32_c64_oneseq.cpp  check-pcg32_fast.cpp  check-pcg32_k1024.cpp  check-pcg32_k1024_fast.cpp  check-pcg32_k16384.cpp  check-pcg32_k16384_fast.cpp  check-pcg32_k2.cpp  check-pcg32_k2_fast.cpp  check-pcg32_k64.cpp  check-pcg32_k64_fast.cpp  check-pcg32_k64_oneseq.cpp  check-pcg32_once_insecure.cpp  check-pcg32_oneseq.cpp  check-pcg32_oneseq_once_insecure.cpp  check-pcg32_unique.cpp  check-pcg64.cpp  check-pcg64_c1024.cpp  check-pcg64_c1024_fast.cpp  check-pcg64_c32.cpp  check-pcg64_c32_fast.cpp  check-pcg64_c32_oneseq.cpp  check-pcg64_fast.cpp  check-pcg64_k1024.cpp  check-pcg64_k1024_fast.cpp  check-pcg64_k32.cpp  check-pcg64_k32_fast.cpp  check-pcg64_k32_oneseq.cpp  check-pcg64_once_insecure.cpp  (+9 more)
test-high/expected/: .gitignore  check-pcg128_once_insecure.out  check-pcg128_oneseq_once_insecure.out  check-pcg16_once_insecure.out  check-pcg16_oneseq_once_insecure.out  check-pcg32.out  check-pcg32_c1024.out  check-pcg32_c1024_fast.out  check-pcg32_c64.out  check-pcg32_c64_fast.out  check-pcg32_c64_oneseq.out  check-pcg32_fast.out  check-pcg32_k1024.out  check-pcg32_k1024_fast.out  check-pcg32_k16384.out  check-pcg32_k16384_fast.out  check-pcg32_k2.out  check-pcg32_k2_fast.out  check-pcg32_k64.out  check-pcg32_k64_fast.out  check-pcg32_k64_oneseq.out  check-pcg32_once_insecure.out  check-pcg32_oneseq.out  check-pcg32_oneseq_once_insecure.out  check-pcg64.out  check-pcg64_c1024.out  check-pcg64_c1024_fast.out  check-pcg64_c32.out  check-pcg64_c32_fast.out  check-pcg64_c32_oneseq.out  check-pcg64_fast.out  check-pcg64_k1024.out  check-pcg64_k1024_fast.out  check-pcg64_k32.out  check-pcg64_k32_fast.out  check-pcg64_k32_oneseq.out  check-pcg64_once_insecure.out  check-pcg64_oneseq.out  check-pcg64_oneseq_once_insecure.out  check-pcg8_once_insecure.out  (+1 more)
